Bug Fix | Vertical Nav | margin on mobile

--- a/src/modules/navigation-vertical/_style.scss
+++ b/src/modules/navigation-vertical/_style.scss
@@ -52,6 +52,10 @@
         display: none;
     }
 
+    .wsu-navigation-vertical ~ .wsu-wrapper-site {
+        margin-left: 0;
+    }
+
 	.wsu-navigation-vertical ~ .wsu-wrapper-site .wsu-width--full {
         margin-left: calc(((100vw - 100%))/ -2);
         margin-right: calc(((100vw - 100%))/ -2);
